    * Add configurable trunk width to Axe + Power = fell tree
    * Add configurable velocity multipler to Boots + Power = witch's broom
    * Add configurable Y velocity to Boots + Punch = hover jump
    * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
    * Add configurable range and duration to Bow + Aqua Affinity = freeze
    * Fix Sword + Infinity, now damages item on use

2012-03-13  0.8.2
    * Add Sword + Punch = knock out of hand (right-click player)
    * Add Sword + Fortune = pickpocket (right-click player)
    * Add Sword + Infinity = selective invisibility (right-click player)
    * Add Sword + Respiration = banhammer (1=kick, 2+=temp ban)
    * Add Chestplate + Punch = brass knuckles (more damage with fists)
    * Add Chestplate + Respiration = fish mode (no damage in water)
    * Add Leggings + Knockback = tackle (more damage when sprinting)
    * Add support for custom items from PlasticCraft, Forestry, Mo' Foods mods in default config
    * Enhance Hoe + Fire Protection = sensor, now also displays player information
    * Fix Sword + Silk Touch = capture creating invalid spawn eggs on non-standard mobs
    * Update to 1.1-R8

2012-02-25  0.7.5
    * Add Bow + Feather Falling II = grapple hook (hold Shift to hang on)
    * Add Sword + Silk Touch = capture (right-click to drop creature/boat/minecart/primedTNT as item)
    * Add Flint & Steel + Silk Touch = remote detonate (ignite TNT)
    * Add Chestplate + Sharpness = reflect damage
    * Add Leggings + Feather Falling = surface (triple-tap shift)
    * Add Fishing Rod + Sharpness = damage mobs
    * Add Pickaxe + Sharpness = mine ore vein
    * Add Hoe + Punch = grow animal
    * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
    * Add support for custom items from Metallurgy mod in default config
    * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops