@@ -10,6 +10,7 @@ X   X
     * Add configurable Y velocity to Boots + Punch = hover jump
     * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
     * Add configurable range and duration to Bow + Aqua Affinity = freeze
+    * Add configurable range and duration to Bow + Bane of Arthropods = poison
     * Fix Sword + Infinity, now damages item on use
 
 2012-03-13  0.8.2
